[project]
name = "ma-due-diligence"
version = "1.0.0"
description = "M&A Due Diligence RL Environment — OpenEnv-compliant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[project.scripts]
server = "server.app:main"
